novo teste bug dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,7 @@ input[type="number"] {
 html {
     scroll-behavior: smooth;
     font-family: "Readex Pro", sans-serif;
+    background-color: #e1e8d9;
     color-scheme: light dark;
 }
 
@@ -370,6 +371,7 @@ footer {
     padding: 4px;
     margin-top: 20px;
     font-size: 12px;
+    color: #38413E;
 }
 
 .container-redes-sociais h2 {
